--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-12  Benjamin Otte  <otte@gnome.org>
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/elements/gsttypefindelement.c:
+	(gst_type_find_element_handle_event):
+	  Fix memleak (#170067).
+
 2005-03-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
