--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_chain_video):
+	  Fix crash on randomly sized input (#169082).
+
 2005-03-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* configure.ac:
