--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-03-15  Richard Hult <richard@imendio.com>
+
+	* gst/gst.defs (element_factory_make): Caller owns return, fixes leak
+	(get_caps): Ditto
+
+	* gst/gst.override (_wrap_gst_tag_list_get): Leak fix
+	(_wrap_gst_tag_list_subscript): Ditto
+
+        Reviewed by: Johan Dahlin <johan@gnome.org>
+
 2005-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
