--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,15 @@
+2005-03-23  Tristan van Berkom  <tristan.van.berkom@gmail.com>
+
+	Reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/elements/gstfilesrc.c: (gst_filesrc_set_property):
+	  Fix broken handling of mmapsize property. Remove useless
+	  g_object_notify(). Fixes #171400.
+
 2005-03-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* tools/gst-inspect.c: (print_interfaces), (print_element_info):
-    added listing implemented interfaces to gst-inspect
+	  added listing implemented interfaces to gst-inspect
 
 2005-03-21  Tim-Philipp Müller  <tim at centricular dot net>
 
