--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-25  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* testsuite/threads/Makefile.am:
+	  ignore signal2 since while it's a genuine bug it manages not to die
+	  half the time
+
 2005-03-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* docs/manual/basics-bins.xml:
