--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-03-25  David Schleef  <ds@schleef.org>
+
+	* gst/gstcpu.c: (illegal_instruction_handler),
+	(cpu_fault_check_enable), (cpu_fault_check_try),
+	(cpu_fault_check_disable), (gst_cpuid_i386), (test_cpuid),
+	(gst_cpuid_test), (_gst_cpu_initialize_i386): Add a temporary
+	SIGILL handler to check for the existence of cpuid before
+	using it.  (fixes #166696)
+
 2005-03-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/elements/gsttypefindelement.c:
