--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-30  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/gstelement.c: (gst_element_found_tags_for_pad):
+	  Always set event source.
+
 2005-03-26  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/elements/gstfdsrc.c: (gst_fdsrc_class_init),
