--- a/po/nl.po
+++ b/po/nl.po
@@ -1,31 +1,33 @@
-# GStreamer translated strings
-# Copyright (C) 2003,2004 GStreamer core team
-# This file is distributed under the same license as the GStreamer package.
+# Dutch translation of gstreamer
+# Copyright (C) 2003, 2004 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gstreamer package.
 # Thomas Vander Stichele <thomas@apestaart.org>, 2004.
+# Elros Cyriatan <cyriatan@fastmail.fm>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GStreamer\n"
+"Project-Id-Version: gstreamer 0.8.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-08 10:47+0100\n"
-"PO-Revision-Date: 2004-01-13 12:03+0100\n"
-"Last-Translator: Thomas Vander Stichele <thomas@apestaart.org>\n"
-"Language-Team: Dutch <nl@li.org>\n"
+"POT-Creation-Date: 2005-02-25 11:30+0100\n"
+"PO-Revision-Date: 2004-08-05 16:56+0200\n"
+"Last-Translator: Elros Cyriatan <cyriatan@fastmail.fm>\n"
+"Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: gst/gst.c:160
 msgid "Print the GStreamer version"
-msgstr "Druk de GStreamer versie af"
+msgstr "Geeft de GStreamer versie weer"
 
 #: gst/gst.c:162
 msgid "Make all warnings fatal"
-msgstr "Maak alle waarschuwingen fataal"
+msgstr "Alle waarschuwingen fataal maken"
 
 #: gst/gst.c:166
 msgid "Print available debug categories and exit"
-msgstr "Druk beschikbare debug-categorieën af en stop"
+msgstr "Beschikbare debug-categorieën weergeven en afsluiten"
 
 #: gst/gst.c:169
 msgid ""
@@ -43,29 +45,29 @@ msgid ""
 "Comma-separated list of category_name:level pairs to set specific levels for "
 "the individual categories. Example: GST_AUTOPLUG:5,GST_ELEMENT_*:3"
 msgstr ""
-"Lijst van categorie_naam=niveau paren, gescheiden door dubbele punten, om "
-"specifieke niveau's in te stellen voor de individuele categorieën.Voorbeeld:"
+"Komma-gescheiden lijst van categorie_naam:niveau paren om specifieke "
+"niveau's in te stellen voor de individuele categorieën. Voorbeeld: "
 "GST_AUTOPLUG:5,GST_ELEMENT_*:3"
 
 #: gst/gst.c:176
 msgid "LIST"
-msgstr ""
+msgstr "LIJST"
 
 #: gst/gst.c:178
 msgid "Disable colored debugging output"
-msgstr "Zet kleuren af in debug-uitvoer"
+msgstr "Kleuren uit zetten in debug-uitvoer"
 
 #: gst/gst.c:180
 msgid "Disable debugging"
-msgstr "Zet debugging af"
+msgstr "Debugging uit zetten"
 
 #: gst/gst.c:184
 msgid "Disable accelerated CPU instructions"
-msgstr "Schakel versnelde CPU-instructies uit"
+msgstr "Versnelde CPU-instructies uit zetten"
 
 #: gst/gst.c:186
 msgid "Enable verbose plugin loading diagnostics"
-msgstr "Schakel uitgebreide diagnostiek aan voor het laden van plugins"
+msgstr "Uitgebreide diagnostiek voor het laden van plugins aan zetten"
 
 #: gst/gst.c:188
 msgid "PATHS"
@@ -77,8 +79,8 @@ msgid ""
 "Comma-separated list of plugins to preload in addition to the list stored in "
 "environment variable GST_PLUGIN_PATH"
 msgstr ""
-"Lijst van plugins, gescheiden door komma's, om eerste te laden bovenop de "
-"lijst volgens omgevingsvariable GST_PLUGIN_PATH"
+"Komma-gescheiden lijst van plugins om voor te laden naast de lijst "
+"opgeslagen in omgevingsvariable GST_PLUGIN_PATH"
 
 #: gst/gst.c:193
 msgid "PLUGINS"
@@ -87,7 +89,7 @@ msgstr "PLUGINS"
 #: gst/gst.c:196
 msgid "Disable trapping of segmentation faults during plugin loading"
 msgstr ""
-"Schakel het opvangen van segmentatiefouten uit tijdens laden van plugins"
+"Het opvangen van segmentatiefouten uit zetten tijdens laden van plugins"
 
 #: gst/gst.c:199
 msgid "SCHEDULER"
@@ -102,14 +104,14 @@ msgid "REGISTRY"
 msgstr "REGISTER"
 
 #: gst/gst.c:214
-#, fuzzy, c-format
+#, c-format
 msgid "path list for loading plugins (separated by '%s')"
-msgstr "padlijst om plugins te laden (gescheiden door '"
+msgstr "padlijst voor het laden van plugins (gescheiden door '%s')"
 
 #: gst/gst.c:218
-#, fuzzy, c-format
+#, c-format
 msgid "Scheduler to use (default is '%s')"
-msgstr "Planner om te gebruiken ('"
+msgstr "Planner om te gebruiken (standaard is '%s')"
 
 #: gst/gstelement.c:312
 #, c-format
@@ -166,7 +168,7 @@ msgstr ""
 
 #: gst/gsterror.c:73
 msgid "Internal GStreamer error: event problem.  File a bug."
-msgstr "Interne GStreamer-fout: eventprobleem.  Stuur een foutrapport."
+msgstr "Interne GStreamer-fout: gebeurtenisprobleem.  Stuur een foutrapport."
 
 #: gst/gsterror.c:75
 msgid "Internal GStreamer error: seek problem.  File a bug."
@@ -174,7 +176,8 @@ msgstr "Interne GStreamer-fout: zoekprobleem.  Stuur een foutrapport."
 
 #: gst/gsterror.c:77
 msgid "Internal GStreamer error: caps problem.  File a bug."
-msgstr "Interne GStreamer-fout: capsprobleem.  Stuur een foutrapport."
+msgstr ""
+"Interne GStreamer-fout: mogelijkheden-probleem.  Stuur een foutrapport."
 
 #: gst/gsterror.c:79
 msgid "Internal GStreamer error: tag problem.  File a bug."
@@ -252,15 +255,15 @@ msgstr "Element ondersteunt deze stroom niet.  Stuur een foutrapport."
 
 #: gst/gsterror.c:150
 msgid "Could not determine type of stream."
-msgstr "Kon het type van de stroom niet herkennen."
+msgstr "Kon de soort van de stroom niet herkennen."
 
 #: gst/gsterror.c:152
 msgid "The stream is of a different type than handled by this element."
-msgstr "De stroom is van een ander type dan dit element kan verwerken."
+msgstr "De stroom is van een andere soort dan dit element kan verwerken."
 
 #: gst/gsterror.c:154
 msgid "There is no codec present that can handle the stream's type."
-msgstr "Er is geen codec aanwezig die dit type stroom kan verwerken."
+msgstr "Er is geen codec aanwezig die deze soort stroom kan verwerken."
 
 #: gst/gsterror.c:155
 msgid "Could not decode stream."
@@ -358,27 +361,27 @@ msgstr "aantal nummers van de verzameling waarop dit stuk staat"
 
 #: gst/gsttag.c:115
 msgid "disc number"
-msgstr "disc nummer"
+msgstr "schijfnummer"
 
 #: gst/gsttag.c:116
 msgid "disc number inside a collection"
-msgstr "nummer van de disc in een verzameling"
+msgstr "nummer van de schijf in een verzameling"
 
 #: gst/gsttag.c:119
 msgid "disc count"
-msgstr "aantal discs"
+msgstr "aantal schijven"
 
 #: gst/gsttag.c:120
 msgid "count of discs inside collection this disc belongs to"
-msgstr "aantal discs in de verzameling waartoe deze disc behoort"
+msgstr "aantal schijven in de verzameling waartoe deze schijf behoort"
 
 #: gst/gsttag.c:124
 msgid "location"
-msgstr "locatie"
+msgstr "lokatie"
 
 #: gst/gsttag.c:125
 msgid "original location of file as a URI"
-msgstr "originele locatie van bestand als een URI"
+msgstr "oorspronkelijke lokatie van bestand als een URI"
 
 #: gst/gsttag.c:129
 msgid "description"
@@ -402,20 +405,19 @@ msgstr "ISRC"
 
 #: gst/gsttag.c:138
 msgid "International Standard Recording Code - see http://www.ifpi.org/isrc/"
-msgstr ""
-"Internationale Standaard Recording Code - zie http://www.ifpi.org/isrc/"
+msgstr "Internationale Standaard Opname Code - zie http://www.ifpi.org/isrc/"
 
 #: gst/gsttag.c:140
 msgid "organization"
-msgstr "organizatie"
+msgstr "organisatie"
 
 #: gst/gsttag.c:143
 msgid "copyright"
-msgstr "copyright"
+msgstr "auteursrecht"
 
 #: gst/gsttag.c:143
 msgid "copyright notice of the data"
-msgstr "copyright-notitie van het stuk"
+msgstr "auteursrechtvermelding van het stuk"
 
 #: gst/gsttag.c:146
 msgid "contact"
@@ -471,7 +473,7 @@ msgstr "audio codec"
 
 #: gst/gsttag.c:165
 msgid "codec the audio data is stored in"
-msgstr "codec waarin de audio-data is opgeslagen"
+msgstr "codec waarin de audiogegevens is opgeslagen"
 
 #: gst/gsttag.c:167
 msgid "bitrate"
@@ -511,7 +513,7 @@ msgstr "encoder"
 
 #: gst/gsttag.c:176
 msgid "encoder used to encode this stream"
-msgstr "encoder gebruikt om deze stroom te encoderen"
+msgstr "encoder gebruikt om deze stroom te coderen"
 
 #: gst/gsttag.c:179
 msgid "encoder version"
@@ -519,7 +521,7 @@ msgstr "encoder versie"
 
 #: gst/gsttag.c:180
 msgid "version of the encoder used to encode this stream"
-msgstr "versie van de encoder gebruikt om deze stroom te encoderen"
+msgstr "versie van de encoder gebruikt om deze stroom te coderen"
 
 #: gst/gsttag.c:182
 msgid "serial"
@@ -531,35 +533,35 @@ msgstr "volgnummer van dit nummer"
 
 #: gst/gsttag.c:184
 msgid "replaygain track gain"
-msgstr ""
+msgstr "aangepaste-geluidssterkte nummer"
 
 #: gst/gsttag.c:184
 msgid "track gain in db"
-msgstr ""
+msgstr "versterking van nummer in db"
 
 #: gst/gsttag.c:186
 msgid "replaygain track peak"
-msgstr ""
+msgstr "aangepaste-geluidssterkte piek van nummer"
 
 #: gst/gsttag.c:186
 msgid "peak of the track"
-msgstr ""
+msgstr "piek van het nummer"
 
 #: gst/gsttag.c:188
 msgid "replaygain album gain"
-msgstr ""
+msgstr "aangepaste-geluidssterkte album"
 
 #: gst/gsttag.c:188
 msgid "album gain in db"
-msgstr ""
+msgstr "versterking album in db"
 
 #: gst/gsttag.c:190
 msgid "replaygain album peak"
-msgstr ""
+msgstr "aangepaste-geluidssterkte piek van album"
 
 #: gst/gsttag.c:190
 msgid "peak of the album"
-msgstr ""
+msgstr "piek van het album"
 
 #: gst/gsttag.c:229
 msgid ", "
@@ -569,7 +571,7 @@ msgstr ", "
 #, c-format
 msgid "There is no element present to handle the stream's mime type %s."
 msgstr ""
-"Er is geen element aanwezig die het mime-type %s van de stroom kan verwerken."
+"Er is geen element aanwezig dat de MIME-soort %s van de stroom kan verwerken."
 
 #: gst/elements/gstfilesink.c:268
 msgid "No file name specified for writing."
@@ -603,16 +605,16 @@ msgstr "Kon bestand \"%s\" niet openen om te lezen."
 #: gst/elements/gstfilesrc.c:792
 #, c-format
 msgid "\"%s\" is a directory."
-msgstr ""
+msgstr "\"%s\" is een map."
 
 #: gst/elements/gstfilesrc.c:798
-#, fuzzy, c-format
+#, c-format
 msgid "File \"%s\" is a socket."
-msgstr "Bestand \"%s\" is geen gewoon bestand."
+msgstr "Bestand \"%s\" is een socket."
 
 #: gst/elements/gstidentity.c:304
 msgid "Failed after iterations as requested."
-msgstr "Fout na iteraties zoals gevraagd."
+msgstr "Mislukt na iteraties zoals gevraagd."
 
 #: gst/elements/gsttypefindelement.c:157
 msgid "caps"
@@ -633,7 +635,7 @@ msgstr "maximum"
 #: gst/parse/grammar.y:186
 #, c-format
 msgid "specified empty bin \"%s\", not allowed"
-msgstr "lege ton \"%s\", niet toegelaten"
+msgstr "lege ton \"%s\" opgegeven, niet toegelaten"
 
 #: gst/parse/grammar.y:191
 #, c-format
@@ -699,9 +701,8 @@ msgid "empty pipeline not allowed"
 msgstr "lege pijplijn niet toegelaten"
 
 #: tools/gst-inspect.c:1130
-#, fuzzy
 msgid "Print all elements"
-msgstr "geen element \"%s\""
+msgstr "Alle elementen weergeven"
 
 #: tools/gst-launch.c:114
 #, c-format
@@ -735,7 +736,7 @@ msgstr ""
 #: tools/gst-launch.c:173
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
-msgstr "FOUT: versta argument %d op commandoregel niet: %s.\n"
+msgstr "FOUT: kon argument %d op opdrachtregel niet verwerken: %s.\n"
 
 #: tools/gst-launch.c:184
 #, c-format
@@ -749,23 +750,23 @@ msgstr "TAG GEVONDEN   : gevonden door element \"%s\".\n"
 
 #: tools/gst-launch.c:412
 msgid "Output tags (also known as metadata)"
-msgstr "Druk tags (ofte metadata) af"
+msgstr "Tags (ook bekend als metadata) weergeven"
 
 #: tools/gst-launch.c:414
 msgid "Output status information and property notifications"
-msgstr "Druk statusinformatie en eigenschapsnotificatie af"
+msgstr "Statusinformatie en eigenschapswaarschuwingen weergeven"
 
 #: tools/gst-launch.c:416
 msgid "Do not output status information of TYPE"
-msgstr "Druk statusinformatie van type TYPE niet af"
+msgstr "Statusinformatie van soort SOORT niet weergeven"
 
 #: tools/gst-launch.c:416
 msgid "TYPE1,TYPE2,..."
-msgstr "TYPE1,TYPE2,..."
+msgstr "SOORT1,SOORT2,..."
 
 #: tools/gst-launch.c:419
 msgid "Save xml representation of pipeline to FILE and exit"
-msgstr "Bewaar xml-representatie van pijplijn in BESTAND en stop"
+msgstr "XML-representatie van pijplijn in BESTAND opslaan en afsluiten"
 
 #: tools/gst-launch.c:419
 msgid "FILE"
@@ -773,11 +774,11 @@ msgstr "BESTAND"
 
 #: tools/gst-launch.c:422
 msgid "Do not install a fault handler"
-msgstr "Installeer geen foutafhandelaar"
+msgstr "Geen foutafhandelaar installeren"
 
 #: tools/gst-launch.c:424
 msgid "Print alloc trace (if enabled at compile time)"
-msgstr "Druk allocatiespoor af indien aangezet tijdens compileren"
+msgstr "Toewijzingsspoor weergeven (indien aangezet tijdens compileren)"
 
 #: tools/gst-launch.c:426
 msgid "Number of times to iterate pipeline"
@@ -821,56 +822,56 @@ msgstr "FOUT: pijplijn wil niet spelen.\n"
 #: tools/gst-register.c:49
 #, c-format
 msgid "Added plugin %s with %d %s.\n"
-msgstr ""
+msgstr "Plugin %s toegevoegd met %d %s.\n"
 
 #: tools/gst-register.c:51 tools/gst-register.c:169
 msgid "feature"
 msgid_plural "features"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "mogelijkheid"
+msgstr[1] "mogelijkheden"
 
 #: tools/gst-register.c:112
 #, c-format
 msgid "Added path   %s to %s \n"
-msgstr ""
+msgstr "Pad %s toegevoegd aan %s\n"
 
 #: tools/gst-register.c:127
 #, c-format
 msgid "Rebuilding %s (%s) ...\n"
-msgstr ""
+msgstr "Bezig met opnieuw bouwen van %s (%s)...\n"
 
 #: tools/gst-register.c:132
 #, c-format
 msgid "Trying to load %s ...\n"
-msgstr ""
+msgstr "Proberen %s te laden...\n"
 
 #: tools/gst-register.c:134
-#, fuzzy, c-format
+#, c-format
 msgid "Error loading %s\n"
-msgstr "Fout bij het sluiten van bestand \"%s\"."
+msgstr "Fout bij het laden van %s\n"
 
 #: tools/gst-register.c:168
 #, c-format
 msgid "Loaded %d plugins with %d %s.\n"
-msgstr ""
+msgstr "%d plugins geladen met %d %s.\n"
 
 #~ msgid "Execution ended after %"
 #~ msgstr "Uitvoering beëindigd na %"
 
 #~ msgid " iterations (sum %"
-#~ msgstr "iteraties (som %"
+#~ msgstr " iteraties (som %"
 
 #~ msgid " ns, average %"
-#~ msgstr "ns, gemiddeld %"
+#~ msgstr " ns, gemiddeld %"
 
 #~ msgid " ns, min %"
-#~ msgstr "ns, min %"
+#~ msgstr " ns, min %"
 
 #~ msgid " ns, max %"
-#~ msgstr "ns, max %"
+#~ msgstr " ns, max %"
 
 #~ msgid " ns).\n"
-#~ msgstr "ns).\n"
+#~ msgstr " ns).\n"
 
 #~ msgid "')"
 #~ msgstr ")"
