--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac: bumped back required version of pygtk; we can backport
+	  or copy over the code generator for what we need
+
 2005-04-16  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* configure.ac:
