--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2005-04-19  Edward Hervey  <bilboed@bilboed.com>
 
 	* gst/gststructure.override: (_wrap_gst_structure_get_double):
+	Forgot to convert the returned value to a PyFloat...
+
+2005-04-19  Edward Hervey  <bilboed@bilboed.com>
+
+	* gst/gststructure.override: (_wrap_gst_structure_get_double):
 	Added overriding function for getting double values from a gst.Structure
 
 2005-04-16  Thomas Vander Stichele  <thomas at apestaart dot org>
